# svg-path-editor

./: .gitignore  .readthedocs.yaml  ReadMe.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  test.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  requirements.txt  usage.rst
docs/source/_static/: custom.css
src/svg_path_editor/: __init__.py  geometry.py  intersect.py  math.py  path_change_origin.py  path_offset.py  path_operations.py  path_parser.py  path_round_corners.py  path_shade.py  sub_path_bounds.py  svg.py
tests/: test_geometry.py  test_math.py  test_path.py  test_path_bevel.py  test_path_change_origin.py  test_path_offset.py  test_path_optimize.py  test_path_parser.py  test_path_reverse.py  test_path_round_corners.py  test_path_shade.py  test_readme.py  test_transform.py
