[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "svg_path_editor"
description = "An SVG path editor"
dynamic = ["version"]
readme = "ReadMe.md"
requires-python = ">=3.12"
license = "MPL-2.0"
license-files = ["License"]
authors = [{ name = "Kurt Böhm", email = "kurbo96@gmail.com" }]
keywords = ["svg", "drawing", "vector"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = ["sympy"]

[tool.setuptools.dynamic]
version = { attr = "svg_path_editor.__version__" }

[project.urls]
Repository = "https://github.com/KurtBoehm/svg_path_editor"

[project.optional-dependencies]
dev = ["furo", "pytest", "pytest-cov", "sphinx", "sphinx-autoapi"]

[tool.pytest]
testpaths = ["tests"]
